# PE-Hackathon-Template-2026

./: .dockerignore  .env.example  .gitattributes  .gitignore  API.md  Dockerfile  INCIDENT_RESPONSE.md  README.md  RELIABILITY.md  RUNBOOK.md  SCALABILITY.md  TROUBLESHOOTING.md  URL_SHORTENER.md  docker-compose.yml  load_seed.py  pyproject.toml
.github/workflows/: bronze.yml  gold.yml  silver.yml
app/: __init__.py  cache.py  seed.py  serializers.py
app/data/: events.csv  urls.csv  users.csv
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  metrics.py  simulation.py  ui.py  urls.py  users.py
auto-healer/: Dockerfile  healer.py  remediation.py  requirements.txt
docs/: API.md  CAPACITY_PLAN.md  CONFIG.md  DECISION_LOG.md  DEPLOY.md  INCIDENT_RESPONSE.md  RELIABILITY.md  RUNBOOK.md  SCALABILITY.md  TROUBLESHOOTING.md
docs/assets/evidence/incident-response/: bronze-services.txt  (+1 more)
frontend/: index.html
monitoring/: alertmanager-entrypoint.sh  alertmanager.yml.tpl  prometheus.yml
monitoring/grafana/dashboards/: incident-command-center.json
monitoring/rules/: incident.yml
nginx/: nginx.conf
scripts/incident/: README.md  restore_nginx.sh  simulate_high_cpu.sh  simulate_high_error_rate.sh  simulate_service_down.sh  simulate_web_replica_crash.sh
scripts/k6/: bronze-baseline.js  gold-tsunami.js  limit-test.js  silver-horde.js
tests/: test_routes.py  test_seed.py
tests/integration/: conftest.py  test_routes.py
tests/unit/: test_cache.py  test_database.py  test_health.py  test_seed.py  test_urls.py
(+6 files in other folders)
